After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 677944 - Patch for a crash due to high column number given by +nn:mm
Patch for a crash due to high column number given by +nn:mm
Status: RESOLVED FIXED
Product: gedit
Classification: Applications
Component: general
3.4.x
Other Linux
: Normal critical
: ---
Assigned To: Gedit maintainers
Gedit maintainers
Depends on:
Blocks:
 
 
Reported: 2012-06-12 13:34 UTC by Dawid Toton
Modified: 2012-09-18 15:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
The patch fixing some of the +LINE:COL crashes (1.93 KB, patch)
2012-06-12 13:34 UTC, Dawid Toton
none Details | Review

Description Dawid Toton 2012-06-12 13:34:24 UTC
Created attachment 216204 [details] [review]
The patch fixing some of the +LINE:COL crashes

See the crash with:

echo four >/tmp/four
gedit /tmp/four +1:6

Attached is the patch that solves part of this problem, that is, for already open files. For newly opened documents it requires exact meaning of variables holding column numbers to be decided by the dev team: user-wished col. number or maybe correctly clamped col. number (look what happens with +LINE:COL in gedit-document.c).

This is what I posted to http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=675249, but looks it fits better here.
Comment 1 Dawid Toton 2012-06-12 13:36:23 UTC
One more thing: I consider this bug severe, because the crash causes instant loss of all unsaved data in gedit.
Comment 2 Ignacio Casal Quinteiro (nacho) 2012-09-18 14:57:00 UTC
Hey, sorry for the really late response. This bug is really bad and we should definitely look at it.
Comment 3 Paolo Borelli 2012-09-18 15:58:59 UTC
Hopefully fixed in 

http://git.gnome.org/browse/gedit/commit/?id=581297bd49268145c0ed958f74db81d4c709de10


Thanks again for the report