Handle a command line specifying a big line number

GtkTextView api does not handle a line number larger than the
line_count, use the GeditDocument utils that do the check before moving
the cursor. Based on a patch by David Toton.

https://bugzilla.gnome.org/show_bug.cgi?id=677944